# DataDialysis

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  benchmark_xml_ingestion.py  docker-compose.yml  example_circuit_breaker.py  field_mapping.json  pyproject.toml  pytest.ini  requirements.txt  test_json_ingestion.py  test_xml_ingestion.py
.cursor/rules/: architect.mdc  dev-machine.mdc
dashboard-frontend/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
dashboard-frontend/app/: globals.css  layout.tsx  page.tsx
dashboard-frontend/components/: error-boundary.tsx  theme-provider.tsx  theme-toggle.tsx
dashboard-frontend/hooks/: use-websocket.ts
dashboard-frontend/lib/: api.ts  validation.ts  websocket.ts
dashboard-frontend/types/: api.ts
docs/: BENCHMARKING_SUITE_SUMMARY.md  CONFIG_MANAGER_DESIGN.md  DASHBOARD_DESIGN.md  DASHBOARD_FRONTEND_PHASE2_COMPLETE.md  DASHBOARD_FRONTEND_PHASES_COMPLETE.md  DASHBOARD_IMPLEMENTATION_PLAN.md  DASHBOARD_PHASE2_COMPLETE.md  DASHBOARD_QUICK_START.md  DATA_MAPPING_EXPLANATION.md  HYBRID_REDACTION_LOGGING_IMPLEMENTATION.md  PERFORMANCE_BENCHMARKING.md  README.md  REDACTION_LOGGING.md  TEST_COVERAGE_ANALYSIS.md  TEST_IMPROVEMENTS_SUMMARY.md  XML_STREAMING_DESIGN.md  XML_STREAMING_IMPLEMENTATION.md
examples/: README.md  end_to_end_flow.py  end_to_end_flow_with_security_report.py  storage_adapter_usage.py
src/: cli.py  main.py
src/adapters/: __init__.py  json_ingester.py  xml_ingester.py
src/domain/: __init__.py  enums.py  field_mapping.py  golden_record.py  guardrails.py  ports.py  services.py
src/infrastructure/: __init__.py  config_manager.py  dataframe_cleaner.py  redaction_context.py  redaction_logger.py  redaction_service_wrapper.py  security_report.py  settings.py  xml_streaming_parser.py
tests/: README.md  README_DUCKDB_SETUP.md  __init__.py  test_config_manager_connection_string.py  test_csv_ingestion.py  test_duckdb_integration.py  test_golden_record.py  test_json_ingestion.py  test_security_bad_data.py  test_xml_ingestion.py  test_xml_streaming.py
tests/adapters/: __init__.py  test_csv_ingester.py  (+4 more)
(+54 files in other folders)
